# neural-home-credit-default-risk

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md
kaggle/src/: eval_classification.py  eval_regression.py  merge_test_bureau_installments_POS_c.py
kaggle/working/: 00_Exploratory_Data_Analysis_application_train.ipynb  00a_Exploratory_Data_Analysis_bureaus.ipynb  00b_Exploratory_Data_Analysis_balances_and_payments.ipynb  01-bk-tensorflow.ipynb  01_Data_Processing.ipynb  02_Modelling - stack split.ipynb  02_Modelling.ipynb  03_Resampling.ipynb  HomeCredit_columns_description.ipynb  ZZ_EDA.ipynb  ZZ_scratch.ipynb  neural_clean.ipynb
kaggle/working/submissions/: 00a_quick_submission.csv  00b_six_neighbors.csv  00c_class_1.csv  00d_merge_and_strip.csv  00e_six_neighbors.csv  01_more_data_plus_process.csv  02_bdt.csv  02_dtcv.csv  02_hgb.csv  02_hgb3.csv  02_hgb_3_2.csv  02_log_reg_CV.csv  02_lrcv.csv  02_new_stack.csv  02_no_gnb.csv  02_post_non_co.csv  02_rfcv.csv  02_stack_calib.csv  02_stack_only.csv  02_stack_only_no_gnb.csv  02_stack_preliminary.csv  02_stack_reset_to_10.csv  02_w_lsvc.csv  02_w_xgbrf.csv
src/neural_home_credit_default_risk/: __init__.py
tests/: test_package.py
